...
    @IBOutlet var progressView: UIProgressView!
    
    weak var delegate: WebViewViewControllerDelegate?
    
    func load(request: URLRequest) {
        webView.load(request)
        webView.accessibilityIdentifier = "UnsplashWebView"
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        estimatedProgressObservation = webView.observe(
...
